// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResizedColumnStore addWeekMeasureColumn should add weak column 1`] = `
Object {
  "allMeasureColumnWidth": null,
  "manuallyResizedColumns": Object {},
  "weakMeasuresColumnWidths": Object {
    "m_aangOxLSeztu": Object {
      "measureColumnWidthItem": Object {
        "locator": Object {
          "measureLocatorItem": Object {
            "measureIdentifier": "m_aangOxLSeztu",
          },
        },
        "width": Object {
          "value": 111,
        },
      },
    },
  },
}
`;

exports[`ResizedColumnStore addWeekMeasureColumn should do nothing when column type is not MEASURE_COLUMN 1`] = `
Object {
  "allMeasureColumnWidth": null,
  "manuallyResizedColumns": Object {},
  "weakMeasuresColumnWidths": Object {},
}
`;

exports[`ResizedColumnStore addWeekMeasureColumn should replace single row measure width with weak column 1`] = `
Object {
  "allMeasureColumnWidth": null,
  "manuallyResizedColumns": Object {},
  "weakMeasuresColumnWidths": Object {
    "m_aangOxLSeztu": Object {
      "measureColumnWidthItem": Object {
        "locator": Object {
          "measureLocatorItem": Object {
            "measureIdentifier": "m_aangOxLSeztu",
          },
        },
        "width": Object {
          "value": 111,
        },
      },
    },
  },
}
`;

exports[`ResizedColumnStore initial state should create valid store for all columns of a first measure on pivoted table 1`] = `
Object {
  "allMeasureColumnWidth": null,
  "manuallyResizedColumns": Object {},
  "weakMeasuresColumnWidths": Object {
    "m_aangOxLSeztu": Object {
      "measureColumnWidthItem": Object {
        "locator": Object {
          "measureLocatorItem": Object {
            "measureIdentifier": "m_aangOxLSeztu",
          },
        },
        "width": Object {
          "value": 155,
        },
      },
    },
  },
}
`;

exports[`ResizedColumnStore initial state should create valid store for all columns of a second measure on pivoted table 1`] = `
Object {
  "allMeasureColumnWidth": null,
  "manuallyResizedColumns": Object {},
  "weakMeasuresColumnWidths": Object {
    "m_acugFHNJgsBy": Object {
      "measureColumnWidthItem": Object {
        "locator": Object {
          "measureLocatorItem": Object {
            "measureIdentifier": "m_acugFHNJgsBy",
          },
        },
        "width": Object {
          "value": 175,
        },
      },
    },
  },
}
`;

exports[`ResizedColumnStore initial state should create valid store for all measure columns on pivoted table 1`] = `
Object {
  "allMeasureColumnWidth": 125,
  "manuallyResizedColumns": Object {},
  "weakMeasuresColumnWidths": Object {},
}
`;

exports[`ResizedColumnStore initial state should create valid store for attribute column width on table with single row attribute 1`] = `
Object {
  "allMeasureColumnWidth": null,
  "manuallyResizedColumns": Object {
    "r_0": Object {
      "width": Object {
        "value": 200,
      },
    },
  },
  "weakMeasuresColumnWidths": Object {},
}
`;

exports[`ResizedColumnStore initial state should create valid store for auto-sizing exactly one measure column on pivoted table 1`] = `
Object {
  "allMeasureColumnWidth": null,
  "manuallyResizedColumns": Object {
    "c_4": Object {
      "measureIdentifier": "m_aangOxLSeztu",
      "width": Object {
        "value": "auto",
      },
    },
  },
  "weakMeasuresColumnWidths": Object {},
}
`;

exports[`ResizedColumnStore initial state should create valid store for auto-sizing exactly two measure columns of two different measures on pivoted table 1`] = `
Object {
  "allMeasureColumnWidth": null,
  "manuallyResizedColumns": Object {
    "c_4": Object {
      "measureIdentifier": "m_aangOxLSeztu",
      "width": Object {
        "value": "auto",
      },
    },
    "c_5": Object {
      "measureIdentifier": "m_acugFHNJgsBy",
      "width": Object {
        "value": "auto",
      },
    },
  },
  "weakMeasuresColumnWidths": Object {},
}
`;

exports[`ResizedColumnStore initial state should create valid store for both attribute columns width on table with two row attributes 1`] = `
Object {
  "allMeasureColumnWidth": null,
  "manuallyResizedColumns": Object {
    "r_0": Object {
      "width": Object {
        "value": 300,
      },
    },
    "r_1": Object {
      "width": Object {
        "value": 200,
      },
    },
  },
  "weakMeasuresColumnWidths": Object {},
}
`;

exports[`ResizedColumnStore initial state should create valid store for both measure columns on non-pivoted table with two measures 1`] = `
Object {
  "allMeasureColumnWidth": null,
  "manuallyResizedColumns": Object {
    "c_0": Object {
      "measureIdentifier": "m_aangOxLSeztu",
      "width": Object {
        "value": 100,
      },
    },
    "c_1": Object {
      "measureIdentifier": "m_acugFHNJgsBy",
      "width": Object {
        "value": 200,
      },
    },
  },
  "weakMeasuresColumnWidths": Object {},
}
`;

exports[`ResizedColumnStore initial state should create valid store for combination of attribute, single measure and all measure widths on pivoted table 1`] = `
Object {
  "allMeasureColumnWidth": null,
  "manuallyResizedColumns": Object {
    "c_4": Object {
      "measureIdentifier": "m_aangOxLSeztu",
      "width": Object {
        "value": 200,
      },
    },
    "r_0": Object {
      "width": Object {
        "value": 300,
      },
    },
  },
  "weakMeasuresColumnWidths": Object {
    "m_acugFHNJgsBy": Object {
      "measureColumnWidthItem": Object {
        "locator": Object {
          "measureLocatorItem": Object {
            "measureIdentifier": "m_acugFHNJgsBy",
          },
        },
        "width": Object {
          "value": 175,
        },
      },
    },
  },
}
`;

exports[`ResizedColumnStore initial state should create valid store for combination of single measure and all measure widths on pivoted table 1`] = `
Object {
  "allMeasureColumnWidth": null,
  "manuallyResizedColumns": Object {
    "c_4": Object {
      "measureIdentifier": "m_aangOxLSeztu",
      "width": Object {
        "value": 200,
      },
    },
  },
  "weakMeasuresColumnWidths": Object {
    "m_acugFHNJgsBy": Object {
      "measureColumnWidthItem": Object {
        "locator": Object {
          "measureLocatorItem": Object {
            "measureIdentifier": "m_acugFHNJgsBy",
          },
        },
        "width": Object {
          "value": 175,
        },
      },
    },
  },
}
`;

exports[`ResizedColumnStore initial state should create valid store for exactly one measure column on pivoted table 1`] = `
Object {
  "allMeasureColumnWidth": null,
  "manuallyResizedColumns": Object {
    "c_4": Object {
      "measureIdentifier": "m_aangOxLSeztu",
      "width": Object {
        "value": 100,
      },
    },
  },
  "weakMeasuresColumnWidths": Object {},
}
`;

exports[`ResizedColumnStore initial state should create valid store for exactly two measure columns of same measure on pivoted table 1`] = `
Object {
  "allMeasureColumnWidth": null,
  "manuallyResizedColumns": Object {
    "c_2": Object {
      "measureIdentifier": "m_aangOxLSeztu",
      "width": Object {
        "value": 200,
      },
    },
    "c_4": Object {
      "measureIdentifier": "m_aangOxLSeztu",
      "width": Object {
        "value": 100,
      },
    },
  },
  "weakMeasuresColumnWidths": Object {},
}
`;

exports[`ResizedColumnStore initial state should create valid store for exactly two measure columns of two different measures on pivoted table 1`] = `
Object {
  "allMeasureColumnWidth": null,
  "manuallyResizedColumns": Object {
    "c_4": Object {
      "measureIdentifier": "m_aangOxLSeztu",
      "width": Object {
        "value": 100,
      },
    },
    "c_5": Object {
      "measureIdentifier": "m_acugFHNJgsBy",
      "width": Object {
        "value": 200,
      },
    },
  },
  "weakMeasuresColumnWidths": Object {},
}
`;

exports[`ResizedColumnStore initial state should create valid store for first attribute column width on table with two row attributes 1`] = `
Object {
  "allMeasureColumnWidth": null,
  "manuallyResizedColumns": Object {
    "r_0": Object {
      "width": Object {
        "value": 200,
      },
    },
  },
  "weakMeasuresColumnWidths": Object {},
}
`;

exports[`ResizedColumnStore initial state should create valid store for first measure column on non-pivoted table with two measures 1`] = `
Object {
  "allMeasureColumnWidth": null,
  "manuallyResizedColumns": Object {
    "c_0": Object {
      "measureIdentifier": "m_aangOxLSeztu",
      "width": Object {
        "value": 100,
      },
    },
  },
  "weakMeasuresColumnWidths": Object {},
}
`;

exports[`ResizedColumnStore initial state should create valid store for measureless column width on column-only table 1`] = `
Object {
  "allMeasureColumnWidth": null,
  "manuallyResizedColumns": Object {
    "cg_3": Object {
      "measureIdentifier": undefined,
      "width": Object {
        "value": 400,
      },
    },
  },
  "weakMeasuresColumnWidths": Object {},
}
`;

exports[`ResizedColumnStore initial state should create valid store for second attribute column width on table with two row attributes 1`] = `
Object {
  "allMeasureColumnWidth": null,
  "manuallyResizedColumns": Object {
    "r_1": Object {
      "width": Object {
        "value": 200,
      },
    },
  },
  "weakMeasuresColumnWidths": Object {},
}
`;

exports[`ResizedColumnStore initial state should create valid store for second measure column on non-pivoted table with two measures 1`] = `
Object {
  "allMeasureColumnWidth": null,
  "manuallyResizedColumns": Object {
    "c_1": Object {
      "measureIdentifier": "m_acugFHNJgsBy",
      "width": Object {
        "value": 100,
      },
    },
  },
  "weakMeasuresColumnWidths": Object {},
}
`;

exports[`ResizedColumnStore removeFromManuallyResizedColumn should set auto-width for measure column when column not sized but auto-width is used 1`] = `
Object {
  "allMeasureColumnWidth": 155,
  "manuallyResizedColumns": Object {
    "c_0": Object {
      "measureIdentifier": "m_aangOxLSeztu",
      "width": Object {
        "value": "auto",
      },
    },
  },
  "weakMeasuresColumnWidths": Object {},
}
`;

exports[`ResizedColumnStore removeFromManuallyResizedColumn should set auto-width for measure column when column sized but auto-width is used 1`] = `
Object {
  "allMeasureColumnWidth": 155,
  "manuallyResizedColumns": Object {
    "c_0": Object {
      "measureIdentifier": "m_aangOxLSeztu",
      "width": Object {
        "value": "auto",
      },
    },
  },
  "weakMeasuresColumnWidths": Object {},
}
`;

exports[`ResizedColumnStore removeWeakMeasureColumn should clear auto-width for measure column 1`] = `
Object {
  "allMeasureColumnWidth": null,
  "manuallyResizedColumns": Object {},
  "weakMeasuresColumnWidths": Object {},
}
`;
